--- a/editortalk/editortalk.html
+++ b/editortalk/editortalk.html
@@ -1,25 +1,25 @@
-<p><strong><font color=\"#cc0000\">MAXSITE 1.10&nbsp;:&nbsp;</font></strong><br />
+<p><strong><font color="#cc0000">MAXSITE 1.10&nbsp;:&nbsp;</font></strong><br />
 &nbsp;&nbsp;&nbsp;&nbsp;เป็นระบบเว็บสำเร็จรูปอย่างง่ายๆ เพื่อเป็นพื้นฐานในการพัฒนาโปรแกรมแบบง่ายๆ โดยการแก้ไข Template แค่ไฟล์เดียว ไม่ได้มีระบบยิ่งใหญ่อะไรเหมือนพวก nuke , jumla , mambo หรือ CMS ตัวอื่นๆนะครับ เพราะบางครั้งผมคิดว่ามันเกินความจำเป็น ระบบที่ทำเลยออกจะเป็น Manual ซะมากกว่านะครับ เพราะผมทำระบบแนวๆนี้เพราะมันสามารถนำไปประยุกต์ใช้ทำเว็บได้หลากหลายกว่านะครับ<br />
 <br />
 &nbsp;&nbsp; โดย MAXSITE 1.10 มีระบบเบื้องต้นดังนี้</p>
 <ul>
     <li>ระบบจัดการผู้ดูแลระบบ </li>
-    <li>ระบบจัดการ Editor\'s talk หน้าเว็บ </li>
-    <li><font face=\"Arial\">ระบบจัดการข้อความเกี่ยวกับเรา</font> </li>
-    <li><font face=\"Arial\">ระบบจัดการข่าวสาร&nbsp; แก้ไข เพิ่ม ลบ หมวดหมู่ได้ง่ายดาย</font> </li>
-    <li><font face=\"Arial\">ระบบจัดการบทความ&nbsp; แก้ไข เพิ่ม ลบ หมวดหมู่ได้ง่ายดาย</font> </li>
+    <li>ระบบจัดการ Editor's talk หน้าเว็บ </li>
+    <li><font face="Arial">ระบบจัดการข้อความเกี่ยวกับเรา</font> </li>
+    <li><font face="Arial">ระบบจัดการข่าวสาร&nbsp; แก้ไข เพิ่ม ลบ หมวดหมู่ได้ง่ายดาย</font> </li>
+    <li><font face="Arial">ระบบจัดการบทความ&nbsp; แก้ไข เพิ่ม ลบ หมวดหมู่ได้ง่ายดาย</font> </li>
     <li>ระบบจัดการข่าวสาร&nbsp; </li>
     <li>ระบบจัดการบทความ </li>
-    <li><font face=\"Arial\">ระบบจัดการปฏิทินกิจกรรมข่าวสาร</font> </li>
+    <li><font face="Arial">ระบบจัดการปฏิทินกิจกรรมข่าวสาร</font> </li>
     <li>ระบบส่งข้อความติดต่อเว็บไซต์ </li>
-    <li><font face=\"Arial\">ข่าวสาร และ บทความ สามารถเปิด/ปิดการแสดงความเห็นได้</font> </li>
-    <li><font face=\"Arial\">แบนข้อความไม่พึงประสงค์จากโฆษณาขายตรงต่างๆ</font> </li>
-    <li><font face=\"Arial\">ระบบความปลอดภัยตอนโพสด้วยการยืนยันตัวเลขป้องกันสแปม</font> </li>
+    <li><font face="Arial">ข่าวสาร และ บทความ สามารถเปิด/ปิดการแสดงความเห็นได้</font> </li>
+    <li><font face="Arial">แบนข้อความไม่พึงประสงค์จากโฆษณาขายตรงต่างๆ</font> </li>
+    <li><font face="Arial">ระบบความปลอดภัยตอนโพสด้วยการยืนยันตัวเลขป้องกันสแปม</font> </li>
 </ul>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;ซึ่งผมนาย อัษฎา อินต๊ะ ได้จัดทำมาเพื่อให้ใช้งานและแก้ไขได้ง่ายๆ ไม่ซับซ้อน หวังว่าผู้ใช้งานคงจะแก้ไขและพัฒนาเองได้ไม่ยากนะครับ</p>
-<p align=\"right\"><strong>ขอแสดงความนับถือ</strong><br />
+<p align="right"><strong>ขอแสดงความนับถือ</strong><br />
 นาย อัษฎา อินต๊ะ<br />
-<a href=\"http://www.mocyc.com/\">http://www.mocyc.com</a><br />
-<a href=\"http://www.CMusedcar.com\">http://www.CMusedcar.com</a><br />
-<a href=\"http://www.GeniusCyber.com\">http://www.GeniusCyber.com</a><br />
-MSN : <a href=\"mailto:mocyc@hotmail.com\">mocyc@hotmail.com</a></p>
+<a href="http://www.mocyc.com/">http://www.mocyc.com</a><br />
+<a href="http://www.CMusedcar.com">http://www.CMusedcar.com</a><br />
+<a href="http://www.GeniusCyber.com">http://www.GeniusCyber.com</a><br />
+MSN : <a href="mailto:mocyc@hotmail.com">mocyc@hotmail.com</a></p>
